Restyling for navigation header. fixing z-index bug
-now all elements in header and logo in same vertical line
-fixed z-index bug causing incorrect flashcards showing

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -18,6 +18,8 @@
 .pageWrapper {
   position: relative;
 
+  z-index: 0;
+
   width: 100%;
   max-width: 100vw;
   min-height: calc(100vh - @headerHeight);
@@ -42,6 +44,7 @@
   .pageWrapper {
     padding-top: 28px;
     max-width: calc(100vw - @navigationMenuWidth);
+    z-index: unset;
   }
 }
 
